reformat code & add getAll-tests